docs: update bunches of ideas and misc

--- a/EO14117 执行令.md
+++ b/EO14117 执行令.md
@@ -1,8 +1,8 @@
 **引言**
 
-**从2025年4月起，一项新规将要求许多美国公司在进行涉及受关注国家相关人员或实体访问敏感美国数据的交易前，遵守政府规定的网络安全标准，甚至全面禁止此类交易。这些新要求很明显是基于国家安全威胁而非隐私保护，并适用于所有存量以及其后出现的新交易。**
+从2025年4月起，一项新规将要求许多美国公司在进行涉及受关注国家相关人员或实体访问敏感美国数据的交易前，遵守政府规定的网络安全标准，甚至全面禁止此类交易。这些新要求很明显是**基于国家安全威胁而非隐私保护**，并适用于所有存量以及其后出现的新交易。
 
-2024年12月27日，美国司法部（DOJ）发布第14117号《关于防止受关注国家获取美国人大量敏感个人数据和美国政府相关数据的行政命令》的最终实施规则（以下简称“14117号最终规则”或“规则”），旨在防止包括中国在内的“关注国家”获取美国公民的大量敏感个人数据及与美国政府相关的数据。**规则禁止美国公司进行涉及向与中国有关联的海外企业转移大量敏感个人数据的交易，并对与这些企业相关的广泛就业、投资及采购交易设置条件，要求其遵守网络安全与基础设施安全局（CISA）同步发布的一系列网络安全要求。该规则于2025年1月8日在《联邦公报》发布，90天后即4月8日生效，并且不包含对现有合同的豁免，这意味着当前供应商、雇佣和商业关系下对敏感数据的持续访问将受到影响。**“敏感数据”涵盖范围广泛，包括美国公民的健康、金融、地理位置及个人身份信息等。
+2024年12月27日，美国司法部（DOJ）发布第14117号《关于防止受关注国家获取美国人大量敏感个人数据和美国政府相关数据的行政命令》的最终实施规则（以下简称“14117号最终规则”或“规则”），旨在防止包括中国在内的“关注国家”获取美国公民的大量敏感个人数据及与美国政府相关的数据。规则**禁止美国公司进行涉及向与中国有关联的海外企业转移大量敏感个人数据的交易**，并对与这些企业相关的广泛就业、投资及采购交易设置条件，要求其遵守网络安全与基础设施安全局（CISA）同步发布的一系列网络安全要求。该规则于2025年1月8日在《联邦公报》发布，90天后即4月8日生效，并且不包含对现有合同的豁免，这意味着当前供应商、雇佣和商业关系下对敏感数据的持续访问将受到影响。“敏感数据”涵盖范围广泛，包括美国公民的健康、金融、地理位置及个人身份信息等。
 
 14117号最终规则反映了美国政府日益增长的担忧，即包括中国在内的“受关注国家”可能（或已经）利用敏感数据破坏国家安全，例如识别漏洞、进行间谍活动，或使美国公民及官员面临操纵和勒索的风险。该规则根据2024年2月拜登总统发布的第14117号行政命令（Executive Order 14117）制定，行政命令同时发布了拟议规则制定的预先通知（ANPRM）。随后，司法部在10月发布了拟议规则制定通知（NPRM），并在仅30天的公众评论期后几乎未作修改即最终确定了该规则。然而，规则仍存在多个关键的不明确之处。美国司法部表示，在短期内可能会提供额外的指引或某些形式的措施，例如临时过渡期的通用许可证（general license）。
 
@@ -10,7 +10,7 @@
 
 **一、最终规则概要**
 
-该规则适用于对与**涵盖的人**（**covered persons，包括自然人和法人主体**）进行交易的美国人和公司。涵盖的人是指位于**受关注国家**（**countries of concern，中国、俄罗斯、古巴、伊朗、朝鲜和委内瑞拉**）或由这些国家居民拥有的实体，相关交易可能涉及获取广泛类别的美国**批量敏感个人数据或政府相关数据（即涵盖的数据**Covered Data**）**。
+该规则适用于对与涵盖的人（covered persons，包括自然人和法人主体）进行交易的美国人和公司。涵盖的人是指位于**受关注国家**（**countries of concern，中国、俄罗斯、古巴、伊朗、朝鲜和委内瑞拉**）或由这些国家居民拥有的实体，相关交易可能涉及获取广泛类别的美国**批量敏感个人数据或政府相关数据（即涵盖的数据**Covered Data**）**。
 
 “批量”数据的门槛可能相当低（基因组及类似数据少至100人，若敏感个人数据被标明为特定针对政府雇员的，则完全没有数量门槛），而且仅进行匿名化处理并不能使数据脱离该规则的范畴。若没有某些故意规避迹象，该规则不限制与非涵盖的人员（即与受关注国家无关联）的外国主体进行交易。
 
