--- a/个人发展.md
+++ b/个人发展.md
@@ -1,5 +1,5 @@
 # 裁员的根本原因
-[[EO14117]]法案注定了美企技术岗退出中国市场。
+[[EO14117 执行令]]法案注定了美企技术岗退出中国市场。
 
 # 失业的迷茫
 失业的我站在十字路口，面前仿佛是一片旷野，里面有数不清的道路，每一条路都看不清远方，只能用力地盯着某一个方向，尝试看清。
