docs: update ideas

--- a/一闪而过的想法.md
+++ b/一闪而过的想法.md
@@ -1,1 +1,11 @@
-1. 从JD出发，模拟面试官 押题
+# 从JD出发，模拟面试官 押题
+# AI
+## 静态html
+### 表格/图表
+### 定制体检报告
+
+## ComfyUI 修改图片
+## 修改视频
+### 剪辑高光时刻
+### 不过审部分修正
+ 
